--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -179,7 +179,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "nlp-pilot-tshiTeZt-py3.12",
    "language": "python",
    "name": "python3"
   },
